detect wordle scores and commands

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0.1"
+lazy_static = "1.4.0"
+regex = "1.5.5"
 serde = { version = "1.0.136", features = ["derive"] }
