--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 actix-web = "4.0.1"
 lazy_static = "1.4.0"
 regex = "1.5.5"
+reqwest = { version = "0.11.10", features = ["blocking", "json"] }
 serde = { version = "1.0.136", features = ["derive"] }
