--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0.1"
+dotenv = "0.15.0"
 lazy_static = "1.4.0"
 regex = "1.5.5"
 reqwest = { version = "0.11.10", features = ["blocking", "json"] }
