--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.0.1"
+diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
+diesel_migrations = "1.4.0"
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
 regex = "1.5.5"
